[Profiler UI] Fix CSS inheritance for proper header alignment (elastic/x-pack#4231)
Fix CSS inheritance of header for proper alignment of headers

Original commit: elastic/x-pack@9abe36f668af78ad25cc8d6954b9f47334e4d3bd

--- a/plugins/profiler/public/less/main.less
+++ b/plugins/profiler/public/less/main.less
@@ -138,15 +138,18 @@
     outline:solid 1px #aaa;
   }
 
-  .tv-row {
+  .tv-row,
+  .tv-row-header {
       display: table;
       width: 100%;
       table-layout: fixed;
   }
 
-  .tv-row-header > .cell {
-    font-weight: bold;
-    color: #777;
+  .tv-row-header {
+     > .cell {
+      font-weight: bold;
+      color: #777;
+    }
   }
 
   .cell {
